# streamdeck

./: .gitignore  Cargo.toml  GUIDE.md  INSTALL.md  PACKAGING.md  README.md  THIRD_PARTY.md  build.rs
lang/fr/LC_MESSAGES/: streamdeck.po
migrations/: 001_init.sql  002_slot_color.sql  003_script_icon.sql  004_alarm.sql  005_alarm_timer.sql  006_capture_source.sql  007_slot_appearance.sql  008_script_shell.sql  009_slot_shortcut.sql  010_ui_language.sql
scripts/: fix_i18n.rs  fix_i18n_remaining.ps1  fix_i18n_remaining.py  gen-i18n.ps1  gen_po.rs  prepare-release.ps1  reset-user-data.ps1  streamdeck-installer.iss.example
src/: alarm.rs  clip_preview.rs  color.rs  external_tools.rs  i18n.rs  icons.rs  lib.rs  main.rs  navigation.rs  paths.rs  script.rs  shortcuts.rs  slot_image.rs
src/app/: grid_model.rs  grid_shortcuts.rs  mod.rs
src/audio/: engine.rs  mod.rs  volume.rs
src/capture/: loopback_linux.rs  loopback_windows.rs  mic.rs  mod.rs
src/db/: mod.rs  models.rs  repo.rs
src/pipeline/: mod.rs
tools/: README.md
ui/: action-btn.slint  app-window.slint  clip-timeline.slint  deck-key.slint  grid.slint  header-btn.slint  icon-pick-btn.slint  image-library-row.slint  library-row.slint  modal-footer.slint  theme.slint  window-chrome.slint
